Fix: Replace Files.readString with readAllBytes for Java 8 compatibility